--- a/css/main.css
+++ b/css/main.css
@@ -180,9 +180,9 @@ textarea {
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
@@ -193,6 +193,7 @@ textarea {
    ========================================================================== */
 
 @media print {
+
   *,
   *::before,
   *::after {
@@ -209,11 +210,11 @@ textarea {
   }
 
   a[href]::after {
-    content: " (" attr(href) ")";
+    content: " ("attr(href) ")";
   }
 
   abbr[title]::after {
-    content: " (" attr(title) ")";
+    content: " ("attr(title) ")";
   }
 
   /*
@@ -261,3 +262,196 @@ textarea {
   }
 }
 
+
+
+
+
+/*
+88""Yb  dP"Yb  8888b.  Yb  dP 
+88__dP dP   Yb  8I  Yb  YbdP  
+88""Yb Yb   dP  8I  dY   8P   
+88oodP  YbodP  8888Y"   dP    
+*/
+body {
+  min-height: 75rem;
+  padding-top: 4.5rem;
+  max-width: 100%;
+}
+
+
+/* 
+88b 88    db    Yb    dP 88""Yb    db    88""Yb 
+88Yb88   dPYb    Yb  dP  88__dP   dPYb   88__dP 
+88 Y88  dP__Yb    YbdP   88""Yb  dP__Yb  88"Yb  
+88  Y8 dP""""Yb    YP    88oodP dP""""Yb 88  Yb 
+*/
+
+.L_menu {
+  height: 5em;
+  background-color: whitesmoke;
+
+}
+
+/*
+ 88888 88   88 8b    d8 88""Yb  dP"Yb  888888 88""Yb  dP"Yb  88b 88 
+    88 88   88 88b  d88 88__dP dP   Yb   88   88__dP dP   Yb 88Yb88 
+o.  88 Y8   8P 88YbdP88 88""Yb Yb   dP   88   88"Yb  Yb   dP 88 Y88 
+"bodP' `YbodP' 88 YY 88 88oodP  YbodP    88   88  Yb  YbodP  88  Y8 
+*/
+
+
+.L_left_side_jumbotron {
+  background-color: #242529;
+
+}
+
+#L_img_Jumbotron {
+  background-image: url("https://dummyimage.com/500x500.jpg");
+}
+
+
+/*
+88888          .dP"Y8 888888  dP""b8 888888 88  dP"Yb  88b 88 
+  .dP ________ `Ybo." 88__   dP   `"   88   88 dP   Yb 88Yb88 
+o `Yb """""""" o.`Y8b 88""   Yb        88   88 Yb   dP 88 Y88 
+YbodP          8bodP' 888888  YboodP   88   88  YbodP  88  Y8 
+*/
+
+.L_3Icons {
+  max-height: 1em;
+}
+
+.L_3section {
+  height: 40%;
+  background-color: #E5E5E5;
+}
+
+#L_header::before {
+  display: block;
+  content: "overline";
+  color: #3F69BF;
+  font-size:large;
+
+}
+
+#L_header {
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 48px;
+  text-align: center;
+  color: #242529;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+h1#L_featured-3{
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 28px;
+/* identical to box height, or 156% */
+
+
+/* Grey/900 */
+
+color: #242529;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+
+
+}
+
+p#L_featured-3{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 28px;
+/* or 175% */
+
+
+/* Grey/800 */
+
+color: #696C74;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+
+
+/*
+   db    88""Yb  dP"Yb  88   88 888888 
+  dPYb   88__dP dP   Yb 88   88   88   
+ dP__Yb  88""Yb Yb   dP Y8   8P   88   
+dP""""Yb 88oodP  YbodP  `YbodP'   88   
+*/
+
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+font-style: normal;
+font-weight: 600;
+font-size: 32px;
+line-height: 48px;
+color: #242529;
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+
+.featurette-heading::before {
+  display: block;
+  content: "overline";
+  color: #3F69BF;
+  font-size:large;
+
+}
+
+.featurette-p{
+font-style: normal;
+font-weight: 400;
+font-size: smaller;
+line-height: 28px;
+color: #242529;
+flex: none;
+order: 1;
+align-self: stretch;
+flex-grow: 0;
+}
+
+.L_button{
+
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+margin-top: 2em;
+padding: 1em 2px;
+width: 12em;
+height: 3em;
+background: #6E9EFF;
+border-radius: 4px;
+flex: none;
+order: 1;
+flex-grow: 0;
+}
