--- a/css/main.css
+++ b/css/main.css
@@ -269,19 +269,25 @@ Yb   dP   YbdP   88""   88"Yb    YbdPYbdP   88"Yb  88   88   88""   o.`Y8b
  YbodP     YP    888888 88  Yb    YP  YP    88  Yb 88   88   888888 8bodP' 
 */
 
-.btn-primary {
+#bootstrap-overrides.btn {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 12em;
+  height: 3em;
   background: #6E9EFF;
   border-radius: 4px;
-  color: white;
+  color: #FFFFFF;
+  text-decoration: none;
+
 
 }
 
-.btn-primary:any-link {
-  color: #FFFFFF;
+
+
+a:any-link{
+  text-decoration: none;
 }
 
 
@@ -453,8 +459,8 @@ dP""""Yb 88oodP  YbodP  `YbodP'   88
 
 
 .L_about_img {
-  height: 30em;
-  width: 30em;
+  height: 100%;
+  width: 100%;
 
 }
 
@@ -505,6 +511,8 @@ dP""""Yb 88oodP  YbodP  `YbodP'   88
   order: 1;
   flex-grow: 0;
 }
+
+
 
 /*
 888888 888888 .dP"Y8 888888 88 8b    d8  dP"Yb  88b 88 88    db    88     .dP"Y8 
@@ -646,4 +654,17 @@ Yb        88    dP__Yb
   color: #3F69BF;
   display: block;
   content: "Kategoria";
+}
+
+
+/*
+ dP""b8  dP"Yb  88b 88 888888    db     dP""b8 888888 
+dP   `" dP   Yb 88Yb88   88     dPYb   dP   `"   88   
+Yb      Yb   dP 88 Y88   88    dP__Yb  Yb        88   
+ YboodP  YbodP  88  Y8   88   dP""""Yb  YboodP   88   
+*/
+
+.L_contact_img{
+  height: 100%;
+  width: 100%;
 }
